problem_record.txt
## llvm version should be 3.7.1, to make the -fllvm flag work, it has be =3.7.1

## can't use cabel to install llvm-hs/llvm-general package, usin stack install can solve this problem, but not all of them

## can't figure out how to write a plugin for gch to get its generated llvm AST, from https://downloads.haskell.org/~ghc/latest/docs/html/users_guide/extending_ghc.html#compiler-plugins, it might not be possible to do it through this way

## Try llvm-data-interop, add it to stack dependency

## generated llvm code are very long, tried -O0, doesn't make any change. May be compare core to cmm could be another direction, because cmm code is shorter and easier to read and understand, but also can be compiled by more compiler?

## Using IC is difficult, because it requires unregistered GHC to generate the .hc file, which needs to change the configuration of GCH

## LLVM version problem, right now ghc only support llvm-3.7. The generated code cannot be compiled through clang, the error message is shown like this (tried with llvm-9.0):
```
You are using an unsupported version of LLVM!
Currently only 3.7 is supported.
We will try though...
opt-3.7: test.ll:15:29: error: expected comma after alias or ifunc's type
@__stginit_Main = alias i8* bitcast (%__stginit_Main_struct* @__stginit_Main$def to i8*)
                            ^
`opt-3.7' failed in phase `LLVM Optimiser'. (Exit code: 1)
```
However, with llvm-3.7, it can't use haskell llvm library.

## Find a haskell package to generate the core2core AST, ghc-dump

## To do: run the llvm-hs function generated through the function (Done)

## To do: count the node by my own code of core AST (Not finished yet)

## Can't upgrade ghc version, using stack to force it compile with ghc 8.10 for llvm. (Solved, method from: https://www.haskell.org/downloads/linux/)

## Problem with the ghc version. Package ghc-dump-core can generate the core AST but it can only supports ghc version < 8.8, llvm-hs can easily parse llvm and generate the llvm AST, but it only support llvm-9.0, which requires ghc version >= 8.10. GHC 8.8 only supports llvm 6.0, which the syntax is a little bit different, and llvm-hs package could not parse it. Haven't found another way to generate Haskell core language AST yet. (Solved)
 ** from https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/compiler/backends/llvm/installing

## Another problem, generated AST is too large that it is hard for it to be pretty printed. Using Data.Text instead of String fixed the problem. 

## Modified ghc-dump source code, can pretty print the core AST now.

## Using cabal to install packages from sources. Method is in the link: https://stackoverflow.com/questions/58272366/haskell-cabal-v2-and-sandbox

## rename vars in one file so that it would be easy to compile, also show the reordering in the diff output, make it easy to read and can mdify the program from the output to the other one. 

## look at var initial value, uniquely identify the var. 

## llvm comments 
